--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
             </div>
         </nav>
         <img src="images/header.jpg"
-             alt="Инвестируйте в криптовалюту нового поколения Fargocoin. Получите доход из трех источников: майнинг, рост курса и по маркетингу"
+             alt="Инвестируйте в криптовалюту нового поколения Fargocoin. Получите доход из трех источников: майнинг, рост курса и маркетинг"
              class="img-responsive header-img">
         <div class="container-fluid slogan">
             <div class="row">
@@ -83,10 +83,9 @@
                     <div class="row">
                         <img src="images/slogan.png" alt="Гарантированный пассивный доход минимум 500% годовых"
                              class="slogan-img">
-                        <div class="slogan-more">Чтобы узнать больше, зарегистрируйтесь бесплатно на сайте компании
-                            Befargo
-                        </div>
-                        <a class="btn btn-info slogan-button" href="">Регистрация</a>
+                        <div class="slogan-more">Чтобы узнать больше, помотрите здесь !</div>
+                        <a class="btn btn-info slogan-button" href="https://befargo.com/?ref=vlkr" target="_blank">Узнать
+                            больше</a>
                     </div>
                 </div>
             </div>
@@ -155,7 +154,7 @@
                             <li><span>Партнерская программа позволяет значительно зарабатывать на реферальных бонусах от партнерской сети.</span>
                             </li>
                         </ol>
-                        <a class="btn btn-info" href="">Присоединиться</a>
+                        <a class="btn btn-info" href="https://befargo.com/?ref=vlkr" target="_blank">Присоединиться</a>
                     </div>
                 </div>
             </div>
@@ -165,22 +164,22 @@
                 <h2 title="Видео по теме Фаргокоин"><img class="section-title" src="images/title-3.png"
                                                          alt="Видео по теме Фаргокоин"></h2>
                 <div class="col-xs-12 col-sm-6 video">
-                    <iframe width="855" height="493" src="https://www.youtube.com/embed/7zsxi2ddKvw" frameborder="0"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Es1k33PFt3U" frameborder="0"
                             allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
                 <div class="col-xs-12 col-sm-6 video">
-                    <iframe width="480" height="277" src="https://www.youtube.com/embed/9nxRJKKt0Z4" frameborder="0"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/OYEsheWI44I" frameborder="0"
                             allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
-        <div class="container-fluid section-4">
+        <div class="container-fluid section-7 section-4">
             <div class="row">
                 <div class="container">
                     <div class="row">
-                        <h2 title="Не упускайте шанс! Начните бизнес уже сегодня"><img class="section-title"
-                                                                                       src="images/title-4.png"
-                                                                                       alt="Не упускайте шанс! Начните бизнес уже сегодня">
+                        <h2 title="Не упускайте шанс! Начните бизнес уже сегодня">
+                            <img class="section-title" src="images/title-4.png"
+                                 alt="Не упускайте шанс! Начните бизнес уже сегодня">
                         </h2>
                         <h4>
                             8 аргументов вступить в сильную команду с гарантированно растущим доходом.<br>
@@ -224,6 +223,9 @@
                         <h4>
                             Не упускайте эту возможность, чтобы не жалеть о упущенной выгоде в будущем.
                         </h4>
+                        <div class="col-xs-12 text-center">
+                            <a href="" class="btn btn-info">Бесплатно зарегистрироваться</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -232,9 +234,17 @@
             <div class="row">
                 <h2 title="Отзывы"><img class="section-title" src="images/title-5.png" alt="Отзывы"></h2>
                 <div class="col-xs-12 review">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam cumque eius minima officia
-                    voluptatibus. Ad adipisci alias, aliquam asperiores ea harum iste maxime mollitia, nam omnis
-                    quibusdam sequi veritatis, voluptas.
+                    <div id="disqus_thread"></div>
+                    <script>
+                        (function () { // DON'T EDIT BELOW THIS LINE
+                            var d = document, s = d.createElement('script');
+                            s.src = 'https://http-writerworks-com-ua.disqus.com/embed.js';
+                            s.setAttribute('data-timestamp', +new Date());
+                            (d.head || d.body).appendChild(s);
+                        })();
+                    </script>
+                    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments
+                        powered by Disqus.</a></noscript>
                 </div>
             </div>
         </div>
@@ -259,36 +269,34 @@
                 <h2 title="Наши ресурсы"><img class="section-title" src="images/title-7.png" alt="Наши ресурсы"></h2>
                 <div class="col-xs-12 resource">
                     <div class="col-xs-12 col-sm-6 col-md-4 resource-block">
-                        Главный сайт <a href="">fargocoin.org</a>
+                        Главный сайт <a href="https://fargocoin.org" target="_blank">fargocoin.org</a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 resource-block">
-                        Сайт Befargo <a href="">befargo.com</a>
+                        Сайт Befargo <a href="https://befargo.com" target="_blank">befargo.com</a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 resource-block">
-                        Биржа Сoinrate <a href="">coinrate.net</a>
+                        Биржа Сoinrate <a href="https://coinrate.net" target="_blank">coinrate.net</a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 resource-block">
-                        Биржа Fargobase <a href="">fargobase.com</a>
+                        Биржа Fargobase <a href="https://fargobase.com" target="_blank">fargobase.com</a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 resource-block">
-                        Блокчейн <a href="">fargochain.org</a>
+                        Блокчейн <a href="https://fargochain.org" target="_blank">fargochain.org</a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 resource-block">
-                        Лотерея <a href="">fargolot.com</a>
+                        Лотерея <a href="https://fargolot.com" target="_blank">fargolot.com</a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 resource-block">
-                        КоинМаркетКап <a href="">coinmarketcap.com</a>
+                        КоинМаркетКап <a href="https://coinmarketcap.com" target="_blank">coinmarketcap.com</a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 resource-block">
-                        Покупка отелей и авиабилетов  <a href="">fargosky.com</a>
+                        Покупка отелей и авиабилетов <a href="https://fargosky.com" target="_blank">fargosky.com</a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 resource-block">
-                        Fargo Кран <a href="">fargofaucet.com</a>
+                        Fargo Кран <a href="https://fargofaucet.com" target="_blank">fargofaucet.com</a>
                     </div>
                 </div>
-                <div class="col-xs-12 text-center">
-                    <a href="" class="btn btn-info">Бесплатно зарегистрироваться</a>
-                </div>
+
             </div>
         </div>
     </main>
@@ -298,7 +306,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 contact-block">
-                            <h3>Получить <span>бесплатную</span> консультацию по методам и способам заработка на криптовалюте</h3>
+                            <h3>Получить <span>бесплатную</span> консультацию по методам и способам заработка на
+                                криптовалюте</h3>
                         </div>
                         <div class="col-xs-12 col-sm-6 contact-block form">
                             <form class="form-block" id="contact-form" method="post" action="sendmail.php">
@@ -309,7 +318,8 @@
                                     <input type="email" name="email" id="email" required placeholder="Ваш E-mail">
                                 </div>
                                 <div class="col-xs-12">
-                                    <textarea name="message" id="message" cols="30" rows="3" required placeholder="Ваше сообщение"></textarea>
+                                    <textarea name="message" id="message" cols="30" rows="3" required
+                                              placeholder="Ваше сообщение"></textarea>
                                 </div>
                                 <div class="col-xs-12">
                                     <button type="submit" id="submit" class="btn btn-info submit">Задать вопрос</button>
@@ -317,10 +327,12 @@
                             </form>
                         </div>
                         <div class="col-xs-12 col-sm-5 col-sm-offset-1 contact-block address">
-                            <p>тел.: <a href="">+38 050 330 43 88</a>, <a href="">viber</a>, <a href="">telegram</a>,</p>
-                            <p>whatsup: <a href="">+38 067 216 26 89</a></p>
-                            <p>skype: <a href="">Buisnessinternet.ru1</a>,</p>
-                            <p>e-mail: <a href="">buisnessinternet.ru@gmail.com</a></p>
+                            <p>тел.: <a href="tel:+380503304388">+38 050 330 43 88</a></p>
+                            <p>тел.: <a href="tel:+380672162689">+38 067 216 26 89</a></p>
+                            <p>viber: <a href="viber://add?number=380672162689">+38 067 216 26 89</a></p>
+                            <p>telegram: <a href="tg://resolve?domain=@380672162689">+38 067 216 26 89</a></p>
+                            <p>whatsapp: <a href="whatsapp://send?phone=+380672162689">+38 067 216 26 89</a></p>
+                            <p>skype: <a href="skype:Buisnessinternet.ru1?chat">Buisnessinternet.ru1</a></p>
                         </div>
                     </div>
                 </div>
@@ -331,7 +343,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12">
-                            Все права защищены. &copy; <span id="year"></span>. Разработка сайта <a href="https://xwork.site">xwork</a>.
+                            Все права защищены. &copy; <span id="year"></span>. Разработка сайта <a
+                                href="https://xwork.site" target="_blank">xwork</a>.
                         </div>
                     </div>
                 </div>
@@ -345,10 +358,48 @@
 <script src="js/jquery-1.12.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.matchHeight-min.js"></script>
+<script id="dsq-count-scr" src="//http-writerworks-com-ua.disqus.com/count.js" async></script>
 
 <!--build:js js/main.min.js -->
 <script src="js/script.js"></script>
 <!-- endbuild -->
+
+Счетчик Yandex Metrica                                                        <!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function () {
+            try {
+                w.yaCounter48945053 = new Ya.Metrika({
+                    id: 48945053,
+                    clickmap: true,
+                    trackLinks: true,
+                    accurateTrackBounce: true,
+                    webvisor: true
+                });
+            } catch (e) {
+            }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () {
+                n.parentNode.insertBefore(s, n);
+            };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else {
+            f();
+        }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript>
+    <div><img src="https://mc.yandex.ru/watch/48945053" style="position:absolute; left:-9999px;" alt=""/></div>
+</noscript>
+<!-- /Yandex.Metrika counter -->
 </body>
 
 </html>
